src/shared/components/search/brief-result.scss
// add-to-favorites action animation colors
.pinDummy prm-icon {
  color: $primary;
}
.pinDummy:before {
  background-color: $lightGold;
}

prm-brief-result-container {
  .prm-peer-reviewed prm-icon {
    color: $darkGrey !important;
  }

  prm-search-result-availability-line [availability-type] {
    color: $darkGrey;
  }

  // don't show course indicators
  div.course-info-mark,
  div.badge-item.prm-course {
    display: none;
  }

  prm-citation-trails-indication-container {
    display: none;
  }

  // force multi-line titles to appear on separate lines
  prm-brief-result .item-title span.media-delimiter::after {
    content: "\A";
    white-space: pre;
  }
}

